--- a/app/src/main/res/layout/activity_image_analysis.xml
+++ b/app/src/main/res/layout/activity_image_analysis.xml
@@ -27,6 +27,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/buttondesign"
         android:text="@string/detect_image"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
