--- a/app/src/main/res/drawable/buttondesign.xml
+++ b/app/src/main/res/drawable/buttondesign.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke
-        android:width="1dp"
-        />
-    <corners
-        android:radius="25dp"
-        />
-    <solid
-        android:color="#39B09B"
-        />
+    <stroke android:width="1dp" />
+    <corners android:radius="25dp" />
+    <solid android:color="#39B09B" />
 </shape>
