--- a/app/src/main/res/layout/fragment_image_analysis.xml
+++ b/app/src/main/res/layout/fragment_image_analysis.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper"
+    android:id="@+id/coco"
     tools:context=".ImageAnalysisFragment">
 
     <Button
