--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -21,10 +21,11 @@
 
             <Button
                 android:id="@+id/signIn"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="@string/login"
+                android:background="@drawable/buttondesign"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -77,7 +78,7 @@
                 android:layout_marginBottom="124dp"
                 android:autofillHints="@string/password"
                 android:ems="10"
-                android:hint="@string/password"
+                android:hint="@string/enter_password"
                 android:inputType="textPassword"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
