--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -17,7 +17,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#3B484E">
 
             <Button
                 android:id="@+id/recoverPasswordBT"
@@ -35,6 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:text="@string/forgot_password"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/editTextForgotEmail"
@@ -50,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="36dp"
                 android:autofillHints="@string/email"
+                android:textColor="@color/white"
                 android:ems="10"
                 android:hint="@string/enter_email"
                 android:inputType="textEmailAddress"
@@ -62,6 +65,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="6dp"
                 android:text="@string/please_enter_your_email"
