--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -17,7 +17,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#3B484E">
 
             <Button
                 android:id="@+id/signIn"
@@ -36,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autofillHints="Email"
-
+                android:textColor="@color/white"
                 android:ems="10"
                 android:hint="@string/enter_email"
                 android:inputType="textEmailAddress"
@@ -51,6 +52,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/email"
                 app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="44dp"
+                android:textColor="@color/white"
                 android:layout_marginBottom="140dp"
                 android:text="@string/password"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -78,6 +81,7 @@
                 android:layout_marginBottom="124dp"
                 android:autofillHints="@string/password"
                 android:ems="10"
+                android:textColor="@color/white"
                 android:hint="@string/enter_password"
                 android:inputType="textPassword"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -103,6 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:text="@string/login"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
